--- a/bgl-net.csproj
+++ b/bgl-net.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>LearnOpenTK</RootNamespace>
-    <AssemblyName>LearnOpenTK</AssemblyName>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>bgl</RootNamespace>
+    <AssemblyName>bgl</AssemblyName>
+    <TargetFramework>net7.0-windows</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,8 +12,10 @@
 
   <ItemGroup>
     <PackageReference Include="OpenTK" Version="4.7.4" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="2.1.3" />
     <PackageReference Include="StbImageSharp" Version="2.27.13" />
     <PackageReference Include="StbSharp" Version="0.7.2.38" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Shaders\shader.frag">
