--- a/bgl-net.csproj
+++ b/bgl-net.csproj
@@ -11,11 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FreeImage-dotnet-core" Version="4.3.6" />
     <PackageReference Include="OpenTK" Version="4.7.4" />
     <PackageReference Include="SixLabors.ImageSharp" Version="2.1.3" />
     <PackageReference Include="StbImageSharp" Version="2.27.13" />
     <PackageReference Include="StbSharp" Version="0.7.2.38" />
-    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Shaders\shader.frag">
