--- a/bgl-net.csproj
+++ b/bgl-net.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>bgl</RootNamespace>
-    <AssemblyName>bgl</AssemblyName>
     <TargetFramework>net7.0-windows</TargetFramework>
+    <RootNamespace>wpf_demo</RootNamespace>
+    <Nullable>enable</Nullable>
+    <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="OpenTK.GLWpfControl" Version="4.2.3" />
     <PackageReference Include="FreeImage-dotnet-core" Version="4.3.6" />
     <PackageReference Include="OpenTK" Version="4.7.4" />
     <PackageReference Include="SixLabors.ImageSharp" Version="2.1.3" />
