--- a/AnimationViewer/AnimationViewer.csproj
+++ b/AnimationViewer/AnimationViewer.csproj
@@ -11,6 +11,8 @@
 
     <ItemGroup>
         <PackageReference Include="SixLabors.ImageSharp"/>
+    </ItemGroup>
+
 </ItemGroup>
     <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('Windows'))">
         <DefineConstants>OS_WINDOWS</DefineConstants>
